--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha",
     "tdd": "mocha -w",
     "cover": "istanbul cover _mocha",
-    "lint": "eslint src/*.js test/*.js",
+    "lint": "jshint src/*.js test/*.js",
     "babel": "rimraf lib && babel src -d lib"
   },
   "author": "Tim Davis",
@@ -18,10 +18,9 @@
     "babel-preset-es2015": "6.6.0",
     "chai": "3.5.0",
     "eslint": "2.8.0",
-    "eslint-config-standard": "5.1.0",
     "eslint-plugin-promise": "1.1.0",
-    "eslint-plugin-standard": "1.3.2",
     "istanbul": "0.4.3",
+    "jshint": "2.9.2",
     "mocha": "2.4.5",
     "rimraf": "2.5.2"
   }
